Fixed a layout bug in scheduling date selector, closes #89

--- a/hub/assets/schedule_popup/style.styl
+++ b/hub/assets/schedule_popup/style.styl
@@ -26,7 +26,7 @@
         &:not(.shown)
             transition: opacity .3s ease
         &.shown
-            z-index: 100500
+            z-index: 500
             opacity: 1
 
     &__record
@@ -50,6 +50,9 @@
             padding-left: 20px
         .bootstrap-select
             max-width: 150px
+        .dropdown-menu
+            z-index: 600
+
 
     &__not-loaded
         height: 340px
